--- a/index.html
+++ b/index.html
@@ -70,5 +70,12 @@
 <script src="js/difficulty.js"></script>
 <script src="js/app.js"></script>
 
+    <footer class="site-footer">
+    <p>
+        This website is an independent fan-made project and is not affiliated with, endorsed by, or sponsored by the National Football League (NFL). All trademarks are the property of their respective owners.
+    </p>
+</footer>
+
 </body>
 </html>
+
