--- a/quiz-list.html
+++ b/quiz-list.html
@@ -43,5 +43,13 @@
 <!-- ✅ THEN THE LOGIC -->
 <script src="js/quiz-list.js"></script>
 
+<footer class="site-footer">
+    <p>
+        This website is an independent fan-made project and is not affiliated with, endorsed by, or sponsored by the National Football League (NFL). All trademarks are the property of their respective owners.
+    </p>
+</footer>
+
+
 </body>
 </html>
+
