--- a/quiz.html
+++ b/quiz.html
@@ -52,5 +52,13 @@
 
 <script src="js/just-quizzes.js"></script>
 <script src="js/quiz.js"></script>
+
+<footer class="site-footer">
+    <p>
+        This website is an independent fan-made project and is not affiliated with, endorsed by, or sponsored by the National Football League (NFL). All trademarks are the property of their respective owners.
+    </p>
+</footer>
+
 </body>
 </html>
+
