--- a/stats.html
+++ b/stats.html
@@ -33,5 +33,12 @@
 <script src="js/just-quizzes.js"></script>
 <script src="js/stats.js"></script>
 
+<footer class="site-footer">
+    <p>
+        This website is an independent fan-made project and is not affiliated with, endorsed by, or sponsored by the National Football League (NFL). All trademarks are the property of their respective owners.
+    </p>
+</footer>
+
 </body>
 </html>
+
