--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:url" content="https://yourdomain.com">
     <meta property="og:image" content="https://yourdomain.com/preview-image.jpg">
     <meta name="theme-color" content="#0b0f12">
+
+    <script data-goatcounter="https://nfltrivia.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 
 <body class="landing-page">
@@ -78,4 +81,5 @@
 
 </body>
 </html>
+
 
