--- a/quiz-list.html
+++ b/quiz-list.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="image/svg+xml" 
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%2250%25%22 y=%2252%25%22 font-size=%2275%22 text-anchor=%22middle%22 dominant-baseline=%22middle%22>🏈</text></svg>">
+
+    <script data-goatcounter="https://nfltrivia.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 
 <body class="quiz-list-page">
@@ -52,4 +55,5 @@
 
 </body>
 </html>
+
 
