--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFL Trivia - Test Your NFL Knowledge</title>
-    <meta name="description" content="Test your NFL knowledge with fun quizzes for beginners, intermediate, and expert fans. Play random quizzes, choose categories, and track your stats.">
+    <title>NFL Trivia – Free NFL Quiz Game for Football Fans</title>
+    <meta name="description" content="Play free NFL trivia quizzes for football fans. Test your knowledge of players, teams, drafts and more. New quizzes added regularly.">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="image/svg+xml" 
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%2250%25%22 y=%2252%25%22 font-size=%2275%22 text-anchor=%22middle%22 dominant-baseline=%22middle%22>🏈</text></svg>">
@@ -19,6 +19,7 @@
 
     <script data-goatcounter="https://nfltrivia.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
+    <meta name="google-site-verification" content="0iTKdFU-QkuuSVtT8Fw6IHgJVgKyBUiG-jJ8_Nlr-Mk" />
 </head>
 
 <body class="landing-page">
@@ -29,6 +30,10 @@
 </header>
 
 <main class="layout page-with-ads">
+
+    <h2 class="visually-hidden">
+    Free NFL trivia quizzes and football knowledge games
+    </h2>
 
     <div class="ad-slot"></div>
 
@@ -73,7 +78,7 @@
 <script src="js/difficulty.js"></script>
 <script src="js/app.js"></script>
 
-    <footer class="site-footer">
+<footer class="site-footer">
     <p>
         This website is an independent fan-made project and is not affiliated with, endorsed by, or sponsored by the National Football League (NFL). All trademarks are the property of their respective owners.
     </p>
@@ -81,5 +86,3 @@
 
 </body>
 </html>
-
-
