--- a/stats.html
+++ b/stats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your NFL Trivia Stats | NFL Quiz</title>
+    <title>Your NFL Trivia Stats | Your stats</title>
     <meta name="description" content="View your NFL quiz progress, completed quizzes, and overall performance stats.">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="image/svg+xml" 
@@ -44,5 +44,6 @@
 
 </body>
 </html>
+
 
 
